HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OpaqueUndefinedClassType/Expected.uv
//! Expected diagnostic metadata for the OpaqueUndefinedClassType rejected-source specimen.

expectedDiagnostic("E-TYP-2509", "rule.14.WF-Opaque-Err")
